# homeassistant

./: .env.example  .gitignore  ALPACA_BOT.md  Dockerfile  README.md  SETUP_GUIDE.md  pyproject.toml
config/: automations.yaml  configuration.yaml  scripts.yaml  sensors.yaml
config/custom_components/speakeasy_router/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json
config/custom_sentences/en/: learned.yaml
config/dashboards/: adguard.yaml  alpaca.yaml  mushroom.yaml  sidebar.yaml  speakeasy.yaml
config/esphome/: _anim_process.py  _meme_process.py  speakeasy-dial.yaml
config/scripts/: launch_visualizer.py  play_video_for_track.py  prefetch_next_tracks.py  save_visualizer_state.py  spotify_play_on_shield.sh  spotify_search_queue.py  stremio_play_on_shield.sh  visualizer_state.json  youtube_cache.json
config/scripts/python/: adguard_resume_now.py  adguard_snooze.py  celebrate.py  denon.py  ha_client.py  mode.py  register_learned_phrase.py  shield_launch_app.py  shield_open.py  shield_play_spotify.py  shield_stremio.py  speakeasy_controls.py  speakeasy_heaters.py  tablet_show.py
config/themes/: neon_speakeasy.yaml
config/www/bubble/: bubble-modules.yaml
config/zigbee2mqtt/: configuration.yaml
docs/: architecture.mmd
src/: alpaca_client.py  api.py  config.py  journal.py  llm_commentary.py  main.py  risk.py  scheduler.py
src/strategies/: crypto_mean_reversion.py  mean_reversion.py
