[project]
name = "alpaca-bot"
version = "0.1.0"
description = "Deterministic Alpaca trading bot with LLM commentary, deployed alongside HA on Pi"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
